fix the contact btn not being clickable on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -2467,7 +2467,8 @@ margin-bottom: 4.6px;
     .loop-two-desktop{
         display: none;
     }
-@media (min-width:700px){
+
+
     .loop-two-desktop{
         display: block;
     }
@@ -2496,4 +2497,3 @@ margin-bottom: 4.6px;
         z-index: 12;
      }
     
-}
